Updated RB Resources

--- a/resourceBundles/es.properties
+++ b/resourceBundles/es.properties
@@ -1,4 +1,4 @@
-products.product=Product
-products.brand=Brand
-products.sku=Sku
-vendors.vendor=Vendor
+dashboard.dashboard=Tablero de instrumentos
+products.product=Productos
+products.brand=Marca
+vendors.vendor=Proveedor
