Fixed some minor bugs

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,4 +1,9 @@
-dashboard.dashboard=Dashboard
-products.product=Product
-products.brand=Brand
-vendors.vendor=Vendor
+#Created by JInto - www.guh-software.de
+#Wed Feb 02 17:24:58 PST 2011
+product=Product
+product.brand=Brand
+toolbar.dashboard=Dashboard
+toolbar.products=Products
+toolbar.products.createnewproduct=Create New Product
+toolbar.products.listproducts=List Products
+vendor=Vendor
