Basic product type admin finished.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -2,8 +2,16 @@
 #Wed Feb 02 17:24:58 PST 2011
 product=Product
 product.brand=Brand
+product.producttype=Product Type
+product.producttype.add=Add
+product.producttype.edit=Edit
+product.producttype.producttypename=Product Type Name
+product.producttype.parentproducttype=Parent Product Type
+product.producttype.noproducttypes=There are currently no product types defined.
+product.producttypes.addnewproducttype=Add New Product Type
 toolbar.dashboard=Dashboard
 toolbar.products=Products
 toolbar.products.createnewproduct=Create New Product
+toolbar.products.producttypes=Product Types
 toolbar.products.listproducts=List Products
 vendor=Vendor
