--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,17 +1,21 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 02 17:24:58 PST 2011
+#Tue Feb 08 08:48:58 PST 2011
 product=Product
 product.brand=Brand
 product.producttype=Product Type
 product.producttype.add=Add
 product.producttype.edit=Edit
-product.producttype.producttypename=Product Type Name
-product.producttype.parentproducttype=Parent Product Type
 product.producttype.noproducttypes=There are currently no product types defined.
+product.producttype.parentproducttype=Parent Product Type
+product.producttype.producttypename=Product Type Name
 product.producttypes.addnewproducttype=Add New Product Type
+toolbar.accounts=Accounts
 toolbar.dashboard=Dashboard
 toolbar.products=Products
+toolbar.products.brandlisting=View All Brands
+toolbar.products.createnewbrand=Create New Brand
 toolbar.products.createnewproduct=Create New Product
-toolbar.products.producttypes=Product Types
 toolbar.products.listproducts=List Products
+toolbar.products.productlisting=View All Products
+toolbar.products.producttypes=Product Types
 vendor=Vendor
