Added resource bundle usage and other changes to product type admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,13 +1,16 @@
 #Created by JInto - www.guh-software.de
 #Tue Feb 08 08:48:58 PST 2011
 product=Product
+product.productlist=Product List
+product.productdetails=Product Details
+product.editproduct=Edit Product
 product.brand=Brand
 product.producttype=Product Type
 product.producttype.add=Add
 product.producttype.edit=Edit
-product.producttype.noproducttypes=There are currently no product types defined.
-product.producttype.parentproducttype=Parent Product Type
 product.producttype.producttypename=Product Type Name
+product.producttype.parentproducttype=Parent Product Type
+product.producttype.noproducttypes=There are currently no product types defined.
 product.producttypes.addnewproducttype=Add New Product Type
 toolbar.accounts=Accounts
 toolbar.dashboard=Dashboard
