Option Group Add and Edit

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,6 +1,29 @@
 #Created by JInto - www.guh-software.de
 #Fri Feb 11 10:36:50 PST 2011
+option=Option
+option.options=Options
+option.optionname=Option Name
+option.optiondescription=Option Description
+option.optiondetail=Option Detail
+option.productoptions=Product Options
+option.optionlist=Option List
+option.editoption=Edit Option
+option.edittoggle.showhide=Show,Hide
+option.addoption=Add Option
+option.editoptiongroup=Edit Option Group
+option.addoptiongroup=Add Option Group
+option.addoptiontogroup=Add Option to This Option Group
+option.addoptiongroup=Edit Option Group
+option.nooptionsdefined=There are currently no product options defined.
+option.optiongroupname=Option Group Name
+option.optiongroupdetail=Option Group Details
+option.optiongroupimage=Option Group Image
+option.selectoptionimage=Select Associated Option Image to Upload (optional)
+option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
+option.optiongroupdescription=Option Group Description
+option.addoptiongroup=Add Option Group
 product=Product
+oduct.products=Products
 product.brand=Brand
 product.editproduct=Edit Product
 product.productdetails=Product Details
@@ -9,6 +32,7 @@ product.producttype=Product Type
 product.producttype.add=Add
 product.producttype.edit=Edit
 product.producttype.noproducttypes=There are currently no product types defined.
+product.producttype.producttypes=Product Types
 product.producttype.parentproducttype=Parent Product Type
 product.producttype.producttypename=Product Type Name
 product.producttypes.addnewproducttype=Add New Product Type
@@ -21,5 +45,7 @@ toolbar.products.createnewproduct=Create New Product
 toolbar.products.listproducts=List Products
 toolbar.products.productlisting=View All Products
 toolbar.products.producttypes=Product Types
+toolbar.products.listproducts=List Products
+toolbar.products.optionlist=Product Options
 toolbar.settings=Settings
 vendor=Vendor
