Changed admin titles to section/item titles.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -35,7 +35,7 @@ product.producttype.noproducttypes=There are currently no product types defined.
 product.producttype.producttypes=Product Types
 product.producttype.parentproducttype=Parent Product Type
 product.producttype.producttypename=Product Type Name
-product.producttypes.addnewproducttype=Add New Product Type
+product.producttype.addnewproducttype=Add New Product Type
 toolbar.accounts=Accounts
 toolbar.dashboard=Dashboard
 toolbar.products=Products
