Option listing and adding.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -4,6 +4,7 @@ option=Option
 option.options=Options
 option.optionname=Option Name
 option.optiondescription=Option Description
+option.optioncode=Option Code
 option.optiondetail=Option Detail
 option.productoptions=Product Options
 option.optionlist=Option List
