Finiesh settings configuration

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,16 +1,16 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 08 08:48:58 PST 2011
+#Fri Feb 11 10:36:50 PST 2011
 product=Product
-product.productlist=Product List
-product.productdetails=Product Details
-product.editproduct=Edit Product
 product.brand=Brand
+product.editproduct=Edit Product
+product.productdetails=Product Details
+product.productlist=Product List
 product.producttype=Product Type
 product.producttype.add=Add
 product.producttype.edit=Edit
-product.producttype.producttypename=Product Type Name
-product.producttype.parentproducttype=Parent Product Type
 product.producttype.noproducttypes=There are currently no product types defined.
+product.producttype.parentproducttype=Parent Product Type
+product.producttype.producttypename=Product Type Name
 product.producttypes.addnewproducttype=Add New Product Type
 toolbar.accounts=Accounts
 toolbar.dashboard=Dashboard
@@ -21,4 +21,5 @@ toolbar.products.createnewproduct=Create New Product
 toolbar.products.listproducts=List Products
 toolbar.products.productlisting=View All Products
 toolbar.products.producttypes=Product Types
+toolbar.settings=Settings
 vendor=Vendor
