Finished basic options/optionsgroup admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -6,28 +6,37 @@ option.optionname=Option Name
 option.optiondescription=Option Description
 option.optioncode=Option Code
 option.optiondetail=Option Detail
+option.optionimage=Option Image
+option.formimagehint=Associate an image for this option Group. Supported Formats: JPG,PNG,GIF.
 option.productoptions=Product Options
 option.optionlist=Option List
 option.addoption=Add Option
+option.removeimage=Remove Current Image
+option.deleteoption=Delete Option
 option.removeoption=Remove Option
 option.editoption=Edit Option
+option.listbyoptions=View List By Options
+option.listbyoptiongroups=View List By Option Groups
+option.nooptions=There are currently no options defined.
 option.save=Save
 option.edittoggle.showhide=Show,Hide
 option.addoption=Add Option
 option.editoptiongroup=Edit Option Group
 option.addoptiongroup=Add Option Group
-option.addoptiontogroup=Add Option to This Option Group
-option.addoptiongroup=Edit Option Group
+option.showoptiongroup=Show Option Group
 option.nooptionsdefined=There are currently no product options defined.
+option.optiongroup=Option Group
 option.optiongroupname=Option Group Name
 option.optiongroupdetail=Option Group Details
 option.optiongroupimage=Option Group Image
 option.selectoptionimage=Select Associated Option Image to Upload (optional)
 option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
+option.show=Show
+option.showall=All
 option.optiongroupdescription=Option Group Description
 option.addoptiongroup=Add Option Group
 product=Product
-oduct.products=Products
+product.products=Products
 product.brand=Brand
 product.editproduct=Edit Product
 product.productdetails=Product Details
