Updated the naming convention for resource Bundles

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,64 +1,73 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 11 10:36:50 PST 2011
+#Mon Feb 14 13:31:59 PST 2011
+admin\:account.detail_title=Account Detail
+admin\:account.list_nav=View All Accounts
+admin\:account.list_title=Account Listing
+admin\:account_nav=Account Manager
+admin\:account_title=Account Manager
+admin\:brand.detail_title=Brand Detail
+admin\:brand.edit_nav=Edit Brand
+admin\:brand.edit_title=Edit Brand
+admin\:brand.list_nav=View All Brands
+admin\:brand.list_title=Brand Listing
+admin\:brand_title=Brand Manager
+admin\:help.about_nav=About Slatwall
+admin\:help.about_title=About Slatwall
+admin\:main.dashboard_nav=Dashboard
+admin\:option.list_nav=Product Options
+admin\:product.edit_nav=Edit Product
+admin\:product.list_nav=View All Products
+admin\:product.types_nav=Product Types
+admin\:product_nav=Product Manager
+admin\:setting.detail_nav=Settings
+admin\:setting.detail_title=Setting Details
+admin\:setting_nav=Settings Manager
+admin\:setting_title=Setting Manager
 option=Option
-option.options=Options
-option.optionname=Option Name
-option.optiondescription=Option Description
-option.optioncode=Option Code
-option.optiondetail=Option Detail
-option.optionimage=Option Image
-option.formimagehint=Associate an image for this option Group. Supported Formats: JPG,PNG,GIF.
-option.productoptions=Product Options
-option.optionlist=Option List
 option.addoption=Add Option
-option.removeimage=Remove Current Image
-option.deleteoption=Delete Option
-option.removeoption=Remove Option
-option.editoption=Edit Option
-option.listbyoptions=View List By Options
-option.listbyoptiongroups=View List By Option Groups
-option.nooptions=There are currently no options defined.
-option.save=Save
-option.edittoggle.showhide=Show,Hide
-option.addoption=Add Option
-option.editoptiongroup=Edit Option Group
 option.addoptiongroup=Add Option Group
-option.showoptiongroup=Show Option Group
+option.deleteoption=Delete Option
+option.editoption=Edit Option
+option.editoptiongroup=Edit Option Group
+option.edittoggle.showhide=Show,Hide
+option.formimagehint=Associate an image for this option Group. Supported Formats\: JPG,PNG,GIF.
+option.listbyoptiongroups=View List By Option Groups
+option.listbyoptions=View List By Options
+option.nooptions=There are currently no options defined.
 option.nooptionsdefined=There are currently no product options defined.
+option.optioncode=Option Code
+option.optiondescription=Option Description
+option.optiondetail=Option Detail
 option.optiongroup=Option Group
-option.optiongroupname=Option Group Name
+option.optiongroupdescription=Option Group Description
 option.optiongroupdetail=Option Group Details
 option.optiongroupimage=Option Group Image
-option.selectoptionimage=Select Associated Option Image to Upload (optional)
+option.optiongroupname=Option Group Name
+option.optionimage=Option Image
+option.optionlist=Option List
+option.optionname=Option Name
+option.options=Options
+option.productoptions=Product Options
+option.removeimage=Remove Current Image
+option.removeoption=Remove Option
+option.save=Save
 option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
+option.selectoptionimage=Select Associated Option Image to Upload (optional)
 option.show=Show
 option.showall=All
-option.optiongroupdescription=Option Group Description
-option.addoptiongroup=Add Option Group
+option.showoptiongroup=Show Option Group
 product=Product
-product.products=Products
 product.brand=Brand
 product.editproduct=Edit Product
 product.productdetails=Product Details
 product.productlist=Product List
+product.products=Products
 product.producttype=Product Type
 product.producttype.add=Add
+product.producttype.addnewproducttype=Add New Product Type
 product.producttype.edit=Edit
 product.producttype.noproducttypes=There are currently no product types defined.
-product.producttype.producttypes=Product Types
 product.producttype.parentproducttype=Parent Product Type
 product.producttype.producttypename=Product Type Name
-product.producttype.addnewproducttype=Add New Product Type
-toolbar.accounts=Accounts
-toolbar.dashboard=Dashboard
-toolbar.products=Products
-toolbar.products.brandlisting=View All Brands
-toolbar.products.createnewbrand=Create New Brand
-toolbar.products.createnewproduct=Create New Product
-toolbar.products.listproducts=List Products
-toolbar.products.productlisting=View All Products
-toolbar.products.producttypes=Product Types
-toolbar.products.listproducts=List Products
-toolbar.products.optionlist=Product Options
-toolbar.settings=Settings
+product.producttype.producttypes=Product Types
 vendor=Vendor
