Updates to RB Keys

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,73 +1,66 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 14 13:31:59 PST 2011
-admin\:account.detail_title=Account Detail
-admin\:account.list_nav=View All Accounts
-admin\:account.list_title=Account Listing
-admin\:account_nav=Account Manager
-admin\:account_title=Account Manager
-admin\:brand.detail_title=Brand Detail
-admin\:brand.edit_nav=Edit Brand
-admin\:brand.edit_title=Edit Brand
-admin\:brand.list_nav=View All Brands
-admin\:brand.list_title=Brand Listing
-admin\:brand_title=Brand Manager
-admin\:help.about_nav=About Slatwall
-admin\:help.about_title=About Slatwall
-admin\:main.dashboard_nav=Dashboard
-admin\:option.list_nav=Product Options
-admin\:product.edit_nav=Edit Product
-admin\:product.list_nav=View All Products
-admin\:product.types_nav=Product Types
-admin\:product_nav=Product Manager
-admin\:setting.detail_nav=Settings
-admin\:setting.detail_title=Setting Details
-admin\:setting_nav=Settings Manager
-admin\:setting_title=Setting Manager
-option=Option
-option.addoption=Add Option
-option.addoptiongroup=Add Option Group
-option.deleteoption=Delete Option
-option.editoption=Edit Option
-option.editoptiongroup=Edit Option Group
-option.edittoggle.showhide=Show,Hide
-option.formimagehint=Associate an image for this option Group. Supported Formats\: JPG,PNG,GIF.
-option.listbyoptiongroups=View List By Option Groups
-option.listbyoptions=View List By Options
-option.nooptions=There are currently no options defined.
-option.nooptionsdefined=There are currently no product options defined.
-option.optioncode=Option Code
-option.optiondescription=Option Description
-option.optiondetail=Option Detail
-option.optiongroup=Option Group
-option.optiongroupdescription=Option Group Description
-option.optiongroupdetail=Option Group Details
-option.optiongroupimage=Option Group Image
-option.optiongroupname=Option Group Name
-option.optionimage=Option Image
-option.optionlist=Option List
-option.optionname=Option Name
-option.options=Options
-option.productoptions=Product Options
-option.removeimage=Remove Current Image
-option.removeoption=Remove Option
-option.save=Save
-option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
-option.selectoptionimage=Select Associated Option Image to Upload (optional)
-option.show=Show
-option.showall=All
-option.showoptiongroup=Show Option Group
-product=Product
-product.brand=Brand
-product.editproduct=Edit Product
-product.productdetails=Product Details
-product.productlist=Product List
-product.products=Products
-product.producttype=Product Type
-product.producttype.add=Add
-product.producttype.addnewproducttype=Add New Product Type
-product.producttype.edit=Edit
-product.producttype.noproducttypes=There are currently no product types defined.
-product.producttype.parentproducttype=Parent Product Type
-product.producttype.producttypename=Product Type Name
-product.producttype.producttypes=Product Types
-vendor=Vendor
+#Mon Feb 14 14:49:44 PST 2011
+admin\:account=Account Manager
+admin\:account.detail=Account Detail
+admin\:account.list=Account Listing
+admin\:brand=Brand Manager
+admin\:brand.detail=Brand Detail
+admin\:brand.edit=Edit Brand
+admin\:brand.list=Brand Listing
+admin\:help=Help
+admin\:help.about=About Slatwall
+admin\:main=Dashboard
+admin\:main.dashboard=Dashboard
+admin\:option=Product Option Manager
+admin\:option.addoption=Add Option
+admin\:option.addoptiongroup=Add Option Group
+admin\:option.dashboard=Option
+admin\:option.deleteoption=Delete Option
+admin\:option.editoption=Edit Option
+admin\:option.editoptiongroup=Edit Option Group
+admin\:option.edittoggle.showhide=Show,Hide
+admin\:option.formimagehint=Associate an image for this option Group. Supported Formats\: JPG,PNG,GIF.
+admin\:option.list=Product Options
+admin\:option.listbyoptiongroups=View List By Option Groups
+admin\:option.listbyoptions=View List By Options
+admin\:option.nooptions=There are currently no options defined.
+admin\:option.nooptionsdefined=There are currently no product options defined.
+admin\:option.optioncode=Option Code
+admin\:option.optiondescription=Option Description
+admin\:option.optiondetail=Option Detail
+admin\:option.optiongroup=Option Group
+admin\:option.optiongroupdescription=Option Group Description
+admin\:option.optiongroupdetail=Option Group Details
+admin\:option.optiongroupimage=Option Group Image
+admin\:option.optiongroupname=Option Group Name
+admin\:option.optionimage=Option Image
+admin\:option.optionlist=Option List
+admin\:option.optionname=Option Name
+admin\:option.options=Options
+admin\:option.productoptions=Product Options
+admin\:option.removeimage=Remove Current Image
+admin\:option.removeoption=Remove Option
+admin\:option.save=Save
+admin\:option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
+admin\:option.selectoptionimage=Select Associated Option Image to Upload (optional)
+admin\:option.show=Show
+admin\:option.showall=All
+admin\:option.showoptiongroup=Show Option Group
+admin\:product=Product Manager
+admin\:product.create=Create New Product
+admin\:product.detail=Product Detail
+admin\:product.edit=Edit Product
+admin\:product.list=View All Products
+admin\:product.types=Product Types
+admin\:setting=Settings Manager
+admin\:setting.dashboard=Settings Manager
+admin\:setting.detail=Settings
+admin\:vendor=Vendor Manager
+admin\:vendor.dashboard=Vendor Dashboard
+entity.account=Account
+entity.account.accountID=Account ID
+entity.account.accountName=Account Name
+entity.account.firstName=First Name
+entity.option=Product Option
+entity.product=Product
+entity.product.producttype=Product Type
