Cleaned up Brand UI a bit and other small changes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,13 @@
 #Created by JInto - www.guh-software.de
 #Fri Feb 11 10:36:50 PST 2011
+admin.delete=Delete
+admin.edit=Edit
+admin.viewdetail=View Detail
+brand=Brand
+brand.brandwebsite=Brand Web Site
+brand.brands=Product Brands
+brand.brandlist=Brand List
+brand.addbrand=Add Brand
 option=Option
 option.options=Options
 option.optionname=Option Name
@@ -38,6 +46,7 @@ option.addoptiongroup=Add Option Group
 product=Product
 product.products=Products
 product.brand=Brand
+product.createproduct=Create New Product
 product.editproduct=Edit Product
 product.productdetails=Product Details
 product.productlist=Product List
