Updated resource bundle bits in Brand, Option and Product type sections to comply with new conventions.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -5,6 +5,7 @@ admin.account.detail=Account Detail
 admin.account.list=Account Listing
 admin.brand=Brand Manager
 admin.brand.detail=Brand Detail
+admin.brand.add=Add Brand
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.help=Help
@@ -13,11 +14,12 @@ admin.main=Dashboard
 admin.main.dashboard=Dashboard
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
-admin.option.addoptiongroup=Add Option Group
 admin.option.dashboard=Option
 admin.option.deleteoption=Delete Option
 admin.option.editoption=Edit Option
+admin.option.addoptiongroup=Add Option Group
 admin.option.editoptiongroup=Edit Option Group
+admin.option.deleteoptiongroup=Delete Option Group
 admin.option.edittoggle.showhide=Show,Hide
 admin.option.formimagehint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 admin.option.list=Product Options
@@ -52,6 +54,10 @@ admin.product.detail=Product Detail
 admin.product.edit=Edit Product
 admin.product.list=View All Products
 admin.product.types=Product Types
+admin.product.listproducttypes=Product Type List
+admin.product.addproducttype=Add Product Type
+admin.product.editproducttype=Edit Product Type
+admin.product.deleteproducttype=Delete Product Type
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Settings
@@ -61,6 +67,15 @@ entity.account=Account
 entity.account.accountID=Account ID
 entity.account.accountName=Account Name
 entity.account.firstName=First Name
+entity.brand.brandName=Brand Name
+entity.brand.brandWebsite=Brand Website
 entity.option=Product Option
+entity.option.optionname=Option Name
+entity.option.optiongroup=Option Group
+entity.optiongroup.optiongroupname=Option Group Name
+entity.optiongroup.optiongroupdescription=Option Group Description
+entity.optiongroup.options=Options
 entity.product=Product
 entity.product.producttype=Product Type
+entity.producttype.producttype=Product Type
+entity.producttype.parentproducttype=Parent Product Type
