Updates to Settings UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,11 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 14 16:00:38 PST 2011
+#Wed Feb 16 15:19:48 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
 admin.brand=Brand Manager
-admin.brand.detail=Brand Detail
 admin.brand.add=Add Brand
+admin.brand.detail=Brand Detail
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.help=Help
@@ -14,12 +14,12 @@ admin.main=Dashboard
 admin.main.dashboard=Dashboard
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
+admin.option.addoptiongroup=Add Option Group
 admin.option.dashboard=Option
 admin.option.deleteoption=Delete Option
-admin.option.editoption=Edit Option
-admin.option.addoptiongroup=Add Option Group
-admin.option.editoptiongroup=Edit Option Group
 admin.option.deleteoptiongroup=Delete Option Group
+admin.option.editoption=Edit Option
+admin.option.editoptiongroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
 admin.option.formimagehint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 admin.option.list=Product Options
@@ -49,18 +49,20 @@ admin.option.show=Show
 admin.option.showall=All
 admin.option.showoptiongroup=Show Option Group
 admin.product=Product Manager
+admin.product.addproducttype=Add Product Type
 admin.product.create=Create New Product
+admin.product.deleteproducttype=Delete Product Type
 admin.product.detail=Product Detail
 admin.product.edit=Edit Product
-admin.product.list=View All Products
-admin.product.types=Product Types
-admin.product.listproducttypes=Product Type List
-admin.product.addproducttype=Add Product Type
 admin.product.editproducttype=Edit Product Type
-admin.product.deleteproducttype=Delete Product Type
+admin.product.list=View All Products
+admin.product.listproducttypes=Product Type List
+admin.product.types=Product Types
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
-admin.setting.detail=Settings
+admin.setting.detail=Global Settings
+admin.setting.detailpermissions=User Permissions
+admin.setting.edit=Edit Global Settings
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account=Account
@@ -70,12 +72,12 @@ entity.account.firstName=First Name
 entity.brand.brandName=Brand Name
 entity.brand.brandWebsite=Brand Website
 entity.option=Product Option
-entity.option.optionname=Option Name
 entity.option.optiongroup=Option Group
-entity.optiongroup.optiongroupname=Option Group Name
+entity.option.optionname=Option Name
 entity.optiongroup.optiongroupdescription=Option Group Description
+entity.optiongroup.optiongroupname=Option Group Name
 entity.optiongroup.options=Options
 entity.product=Product
 entity.product.producttype=Product Type
-entity.producttype.producttype=Product Type
 entity.producttype.parentproducttype=Parent Product Type
+entity.producttype.producttype=Product Type
