Added Permision manager

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,11 +1,15 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 16 16:49:29 PST 2011
+#Fri Feb 18 15:06:15 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
+admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.brand=Brand Manager
 admin.brand.add=Add Brand
-admin.brand.detail=Brand Detail
+admin.brand.delete=Delete Brand
+admin.brand.detail=Brand Detial
+admin.brand.detail_hint=View the Info page of a given Brand
+admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.help=Help
@@ -48,6 +52,7 @@ admin.option.selectoptionimage=Select Associated Option Image to Upload (optiona
 admin.option.show=Show
 admin.option.showall=All
 admin.option.showoptiongroup=Show Option Group
+admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.product=Product Manager
 admin.product.addproducttype=Add Product Type
 admin.product.create=Create New Product
@@ -61,8 +66,8 @@ admin.product.types=Product Types
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
-admin.setting.detailpermissions=User Permissions
 admin.setting.edit=Edit Global Settings
+admin.setting.editpermissions=User Permissions
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account.accountEmails=Account Emails
