Controller refactoring and changed location of logo.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -12,6 +12,8 @@ admin.brand.detail_hint=View the Info page of a given Brand
 admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
+admin.brand.delete=Delete Brand
+admin.brand.save=Save Brand
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
