--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -13,7 +13,10 @@ admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.brand.delete=Delete Brand
+admin.brand.delete_nav=Delete
+admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.save=Save Brand
+admin.brand.save_nav=Save
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
