Standardized brand controller actions.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -5,8 +5,7 @@ admin.account.detail=Account Detail
 admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.brand=Brand Manager
-admin.brand.add=Add Brand
-admin.brand.delete=Delete Brand
+admin.brand.create=Add Brand
 admin.brand.detail=Brand Detial
 admin.brand.detail_hint=View the Info page of a given Brand
 admin.brand.detail_permission=View Brand Info
