Updated brand views.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -6,7 +6,7 @@ admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.brand=Brand Manager
 admin.brand.create=Add Brand
-admin.brand.detail=Brand Detial
+admin.brand.detail=Brand Detail
 admin.brand.detail_hint=View the Info page of a given Brand
 admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
@@ -16,10 +16,12 @@ admin.brand.delete_nav=Delete
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
+admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
 admin.main.dashboard=Dashboard
+admin.nav.back=Go Back
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
 admin.option.addoptiongroup=Add Option Group
