--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -13,9 +13,11 @@ admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.brand.delete=Delete Brand
 admin.brand.delete_nav=Delete
+admin.brand.delete_success=Brand was deleted successfully
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
+admin.brand.save_success=Brand was saved successfully
 admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.help=Help
 admin.help.about=About Slatwall
