Added isAssigned calculated property to Brand.cfc and added functionality to ActionCaller custom tag to disable link and trigger dialog alert box.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -12,8 +12,10 @@ admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
 admin.brand.delete=Delete Brand
+admin.brand.delete_disabled=Brand cannot be deleted because it has been assigned to products
 admin.brand.delete_nav=Delete
 admin.brand.delete_success=Brand was deleted successfully
+admin.brand.delete_isassigned=Brand cannot be deleted because it has been assigned to products
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
@@ -277,7 +279,7 @@ entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
 entity.producttype.Products=Products
-entity.producttype.parentProductType=parentProductType
+entity.producttype.parentProductType=Parent Product Type
 entity.producttype.productType=Product Type
 entity.producttype.productTypeID=productTypeID
 entity.producttype.subProductTypes=subProductTypes
