--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -64,15 +64,22 @@ admin.option.showall=All
 admin.option.showoptiongroup=Show Option Group
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.product=Product Manager
-admin.product.addproducttype=Add Product Type
+admin.product.createproducttype=Create Product Type
 admin.product.create=Create New Product
 admin.product.deleteproducttype=Delete Product Type
+admin.product.deleteproducttype_nav=Delete
+admin.product.deleteproducttype_confirm=Are you sure you want to delete this product type?
+admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be deleted first.
+admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.detail=Product Detail
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
+admin.product.saveproducttype=Save Product Type
+admin.product.saveproducttype_nav=Save
+admin.product.saveproducttype_success=The Product Type was successfully saved
 admin.product.list=View All Products
 admin.product.listproducttypes=Product Type List
-admin.product.types=Product Types
+admin.product.producttypes=Product Types
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
