Enabled re-assigning of products to new sub-product types when added.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -75,6 +75,7 @@ admin.product.detail=Product Detail
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.saveproducttype=Save Product Type
+admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
 admin.product.list=View All Products
