--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -28,6 +28,7 @@ admin.main.dashboard=Dashboard
 admin.nav.back=Go Back
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
+admin.option.closeform=Close
 admin.option.create=Manage Option Group
 admin.option.createoptiongroup=Add Option Group
 admin.option.dashboard=Option
@@ -66,7 +67,7 @@ admin.product.create=Create New Product
 admin.product.deleteproducttype=Delete Product Type
 admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_confirm=Are you sure you want to delete this product type?
-admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be deleted first.
+admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.detail=Product Detail
 admin.product.edit=Edit Product
