Mostly done with Option/Option Group section revisions. Admin modeled after class extension manager.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -32,12 +32,18 @@ admin.option.closeform=Close
 admin.option.create=Manage Option Group
 admin.option.createoptiongroup=Add Option Group
 admin.option.dashboard=Option
-admin.option.deleteoption=Delete Option
+admin.option.delete=Delete Option
+admin.option.delete_confirm=Are you sure you want to delete this option?
 admin.option.deleteoptiongroup=Delete Option Group
-admin.option.edit=Manage Option Group
+admin.option.deleteoptiongroup_confirm=Are you sure you want to delete this Option Group?
+admin.option.detailoptiongroup=Option Group Details
+admin.option.edit=Edit Option Group
+admin.option.removeimage=Remove Current Image
+admin.option.saveoption=Save Option
+admin.option.saveoption_nav=Save
 admin.option.saveoptiongroup=Save Option Group
 admin.option.saveoptiongroup_nav=Save
-admin.option.editoption=Edit Option
+admin.option.editoption=Manage Option Group
 admin.option.editoptiongroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
 admin.option.optiongroupimagehint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
@@ -48,11 +54,9 @@ admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
 admin.option.optiondetail=Option Detail
 admin.option.optiongroup=Option Group
-admin.option.optiongroupdetail=Option Group Details
 admin.option.optiongroupfilter=Option Group Filter
 admin.option.optionlist=Option List
 admin.option.options=Options
-admin.option.removeimage=Remove Current Image
 admin.option.removeoption=Remove Option
 admin.option.save=Save
 admin.option.saveoptiongroup_success=The Option Group was saved successfully
