Finished product product option admin.

--- a/com/utility/validator/resources/DefaultValidationMessages.properties
+++ b/com/utility/validator/resources/DefaultValidationMessages.properties
@@ -8,6 +8,7 @@ date={objectValue} is an invalid date.
 email={objectValue} is an invalid email address.
 future={objectValue} must be a future date.
 guid={objectValue} is an invalid guid.
+imageFile=There was a problem uploading your image or it was not a valid file type.
 inlist=The value for {objectLabel} is not in the list {list}.
 ismatch=The value for {objectLabel} is not the same as {ismatch}.
 lowercase={objectValue} must be lower case.
