--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -46,7 +46,6 @@ admin.option.saveoptiongroup_nav=Save
 admin.option.editoption=Manage Option Group
 admin.option.editoptiongroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
-admin.option.optiongroupimagehint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 admin.option.list=Product Options
 admin.option.listbyoptiongroups=View List By Option Groups
 admin.option.listbyoptions=View List By Options
@@ -58,10 +57,11 @@ admin.option.optiongroupfilter=Option Group Filter
 admin.option.optionlist=Option List
 admin.option.options=Options
 admin.option.removeoption=Remove Option
+admin.option.reorder=Reorder
 admin.option.save=Save
 admin.option.saveoptiongroup_success=The Option Group was saved successfully
+admin.option.saveorder=Save Order
 admin.option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
-admin.option.selectoptionimage=Select Associated Option Image to Upload (optional)
 admin.option.show=Show
 admin.option.showall=All
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
@@ -185,11 +185,13 @@ entity.option.optionDescription=Option Description
 entity.option.optionGroup=Option Group
 entity.option.optionID=Option ID
 entity.option.optionImage=Option Image
+entity.option.optionImage_hint=Select Associated Option Image to Upload (optional)
 entity.option.optionName=Option Name
 entity.option.sortOrder=Sort Order
 entity.optiongroup.optionGroupDescription=Option Group Description
 entity.optiongroup.optionGroupID=Option Group ID
 entity.optiongroup.optionGroupImage=Option Group Image
+entity.optiongroup.optionGroupImage_hint=Associate an image for this option Group. Supported Formats. JPG,PNG,GIF.
 entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
 entity.order.account=account
@@ -436,6 +438,7 @@ validator.date={objectValue} is an invalid date.
 validator.email={objectValue} is an invalid email address.
 validator.future={objectValue} must be a future date.
 validator.guid={objectValue} is an invalid guid.
+validator.imageFile=An error occurred uploading your image or it was not a valid file type
 validator.inlist=The value for {objectLabel} is not in the list {list}.
 validator.ismatch=The value for {objectLabel} is not the same as {ismatch}.
 validator.lowercase={objectValue} must be lower case.
