Changed validator to a singleton, hooked it up to the Slatwall rbFacory for errors and property text, and added it to the bean factory.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -426,3 +426,38 @@ entity.vendorskustock.quantity=quantity
 entity.vendorskustock.sku=sku
 entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
+validator.assertfalse=assertion failed
+validator.asserttrue=assertion failed
+validator.array={objectValue} is an invalid array.
+validator.binary={objectValue} is not a valid binary value.
+validator.boolean={objectValue} is not a valid boolean value.
+cvalidator.reditcardnumber={objectValue} is an invalid credit card number.
+validator.date={objectValue} is an invalid date.
+validator.email={objectValue} is an invalid email address.
+validator.future={objectValue} must be a future date.
+validator.guid={objectValue} is an invalid guid.
+validator.inlist=The value for {objectLabel} is not in the list {list}.
+validator.ismatch=The value for {objectLabel} is not the same as {ismatch}.
+validator.lowercase={objectValue} must be lower case.
+validator.max={objectValue} must be less than or equal to {max}.
+validator.min={objectValue} must be greater than or equal to {min}.
+validator.notnull=The field {objectLabel} must not be a null value.
+validator.notempty=The field {objectLabel} must contain a value.
+validator.required=The field {objectLabel} is required.
+validator.notinlist=The value for {objectLabel} is in the list {list} and should not be.
+validator.numeric={objectLabel} is not a valid numeric value.
+validator.query={objectValue} is an invalid query.
+validator.password={objectValue} is not a valid password.
+validator.past={objectValue} must be a past date.
+validator.pattern=.
+validator.phone={objectValue} is an invalid phone number.
+validator.range={objectValue} does not fall between the range of {min} - {max}.
+validator.regex={objectValue} is an invalid regex.
+validator.ssn={objectValue} is an invalid social security number.
+validator.string={objectValue} is an invalid string.
+validator.struct={objectValue} is an invalid struct.
+validator.size={objectValue} does not fall between the size {min} - {max}.
+validator.url={objectValue} is an invalid URL.
+validator.uppercase={objectValue} must be upper case.
+validator.uuid={objectValue} is an invalid UUID.
+validator.zipCode={objectValue} is an invalid zip code.
