Revised Product Option Admin fixes

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -34,8 +34,12 @@ admin.option.createoptiongroup=Add Option Group
 admin.option.dashboard=Option
 admin.option.delete=Delete Option
 admin.option.delete_confirm=Are you sure you want to delete this option?
+admin.option.delete_disabled=This option cannot be deleted because it is assigned to Product SKUs.
+admin.option.delete_success=The option was deleted successfully.
 admin.option.deleteoptiongroup=Delete Option Group
 admin.option.deleteoptiongroup_confirm=Are you sure you want to delete this Option Group?
+admin.option.deleteoptiongroup_disabled=This option group cannot be deleted because it contains options.
+admin.option.deleteoptiongroup_success=The option group was successfully deleted.
 admin.option.detailoptiongroup=Option Group Details
 admin.option.edit=Edit Option Group
 admin.option.removeimage=Remove Current Image
@@ -49,6 +53,7 @@ admin.option.edittoggle.showhide=Show,Hide
 admin.option.list=Product Options
 admin.option.listbyoptiongroups=View List By Option Groups
 admin.option.listbyoptions=View List By Options
+admin.option.nooptiongroupsdefined=There are currently no product options groups defined.
 admin.option.nooptionsdefined=There are currently no product options defined.
 admin.option.nooptionsingroup=There are currently no product options in this option group
 admin.option.optiondetail=Option Detail
